Source/WebCore/rendering/RenderTheme.cpp
@@ -1554,6 +1554,16 @@ auto RenderTheme::colorCache(OptionSet<StyleColorOptions> options) const -> Colo
     }).iterator->value;
 }
 
+static Color defaultLinkColor(bool useDarkAppearance)
+{
+    return useDarkAppearance ? SRGBA<uint8_t> { 158, 158, 255 } : SRGBA<uint8_t> { 0, 0, 238 };
+}
+
+static Color defaultVisitedLinkColor(bool useDarkAppearance)
+{
+    return useDarkAppearance ? SRGBA<uint8_t> { 208, 173, 240 } : SRGBA<uint8_t> { 85, 26, 139 };
+}
+
 Color RenderTheme::systemColor(CSSValueID cssValueId, OptionSet<StyleColorOptions> options) const
 {
     auto useDarkAppearance = options.contains(StyleColorOptions::UseDarkAppearance);
@@ -1573,12 +1583,12 @@ Color RenderTheme::systemColor(CSSValueID cssValueId, OptionSet<StyleColorOption
     // https://drafts.csswg.org/css-color-4/#valdef-system-color-linktext
     // Text in non-active, non-visited links. For light backgrounds, traditionally blue.
     case CSSValueLinktext:
-        return useDarkAppearance ? SRGBA<uint8_t> { 158, 158, 255 } : SRGBA<uint8_t> { 0, 0, 238 };
+        return defaultLinkColor(useDarkAppearance);
 
     // https://drafts.csswg.org/css-color-4/#valdef-system-color-visitedtext
     // Text in visited links. For light backgrounds, traditionally purple.
     case CSSValueVisitedtext:
-        return useDarkAppearance ? SRGBA<uint8_t> { 208, 173, 240 } : SRGBA<uint8_t> { 85, 26, 139 };
+        return defaultVisitedLinkColor(useDarkAppearance);
 
     // https://drafts.csswg.org/css-color-4/#valdef-system-color-activetext
     // Text in active links. For light backgrounds, traditionally red.
@@ -1667,8 +1677,8 @@ Color RenderTheme::systemColor(CSSValueID cssValueId, OptionSet<StyleColorOption
     // Non-standard addition.
     case CSSValueWebkitLink: {
         if (forVisitedLink)
-            return systemColor(CSSValueVisitedtext, options);
-        return systemColor(CSSValueLinktext, options);
+            return defaultVisitedLinkColor(useDarkAppearance);
+        return defaultLinkColor(useDarkAppearance);
     }
 
     // Deprecated system-colors:
